# ansible-logscale

./: README.md  inventory.ini  pyproject.toml  requirements.yml
inventory/: pslab.yaml  pslab.yml
playbooks/: ansible.yml  deploy-kafka.yml  deploy-lb.yaml  deploy-logscale.yml  kafka-deploy.yml  kafkadelete.yml  logscale-deploy.yml  logscale.yml  ospatch.yml
roles/common/tasks/: main.yml
templates/: logscale.ngnix.conf.j2
